<resources>
    <string name="app_name">CollegeSchedulerApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_toDo">ToDo</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add">Add</string>
    <string name="toDo">to-do</string>
    <string name="add_class">Add Class</string>
    <string name="add_class_task">Add Class Task</string>






    <string name="add_course_string">Add a Course</string>
    <string name="menu_gallery">Gallery</string>
    <string name="new_course">New Course</string>
    <string name="course_name_string">Course Name:</string>
    <string name="instructor_string">Instructor:</string>
    <string name="days_string">Days:</string>
    <string name="location_string">Location:</string>
    <string name="time_string">Time:</string>
    <string name="pap_string">A paper and pencil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrive">Fragment I want to arrive to</string>
    <string name="remove">remove</string>
    <string name="save">Save</string>
    <string name="plus">+</string>


</resources>