<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#FFFFFF"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:id="@+id/linear"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">


            <Button
                android:id="@+id/remove"
                android:layout_width="50dp"
                android:layout_height="190dp"
                android:text="@string/remove"
                android:background="@color/background"
                android:textColor="@color/white"
                />


            <ImageView
                android:contentDescription="@string/pap_string"
                android:layout_margin="10dp"
                android:id="@+id/image"
                android:src="@drawable/paper"
                android:layout_width="70dp"
                android:layout_height="70dp" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/className"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/course_name_string"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/instructor"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/instructor_string" />

                <!--                <EditText-->
                <!--                    android:id="@+id/days"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:textSize="15sp"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:text="@string/days_string"-->
                <!--                    />-->

                <!--                <EditText-->
                <!--                    android:id="@+id/location"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:textSize="15sp"-->
                <!--                    android:textColor="@color/black"-->
                <!--                    android:text="@string/location_string"-->
                <!--                    />-->

                <EditText
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="17sp"
                    android:textColor="@color/black"
                    android:text="@string/time_string"
                    />

                <!--                <LinearLayout-->
                <!--                    android:layout_width="265dp"-->
                <!--                    android:layout_height="60dp"-->
                <!--                    android:orientation="vertical"-->
                <!--                    -->
                <!--                    -->
                <Button
                    android:id="@+id/save"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:text="@string/save"
                    android:background="@color/background"

                    />
                <!--                    <Button-->
                <!--                        android:id="@+id/delete"-->
                <!--                        android:layout_width="80dp"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:text="@string/save"-->
                <!--                        android:background="@color/background"-->
                <!--                        />-->
                <!--                </LinearLayout>-->


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
